# te.cpp

./: .$plan.drawio.bkp  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  plan.drawio
app/: main.cpp  te.cpp
common/: config.json  types.hpp
common/styles/: style.hpp
core/: editor.cpp  editor.hpp  te.cpp  te.hpp
core/events/: eventManager.hpp
core/input_handle/: input_handler.cpp  input_handler.hpp
core/input_handler/: input_handler.cpp  input_handler.hpp
core/key_press/: key_press.cpp  key_press.hpp
core/pages/editor_win/: editorWin.cpp  editorWin.hpp
core/pages/entry_win/: entryWin.cpp  entryWin.hpp
core/status_bar/: status_bar.cpp  status_bar.hpp
docs/: README.md  TODO.md
src/: te.cpp
test/str_matching_algo/: run.sh  str_match.cpp
utils/: color_term.hpp
utils/timer/: timer.cpp  timer.hpp
